<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Azure.MicrosoftLogin">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="Welcome, "
        android:textColor="#3f3f3f"
        android:textSize="30px"
        android:visibility="invisible" />

    <ImageView

        android:id="@+id/imglogoMicrosoft"
        android:layout_width="175dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/microsoft" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/iclb_microsoft"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <Button
        android:id="@+id/callGraph"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#00a1f1"
        android:hint="Call Microsoft Graph"
        android:text="@string/action_siguiente"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="20dp">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/graphData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/action_obtenerdata"
        android:textColor="#3f3f3f"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">


        <Button
            android:id="@+id/loging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#00a1f1"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:visibility="invisible" />

        <Button
            android:id="@+id/clearCache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="#00a1f1"
            android:text="@string/cerrar_sesion"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>